--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,32 +1,66 @@
 body {
-    background-color:#1E1E1E;
+    background-image: linear-gradient(to bottom, black, gray);
     margin: 0px;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'verdana';
 }
 
-#header-links {
-    margin-top: 30px;
-    margin-left: 45px;
+::-webkit-scrollbar{
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track{
+    background:#f1f1f1;
+  }
+  ::-webkit-scrollbar-thumb{
+    background:#888; 
+  }
+  ::-webkit-scrollbar-thumb:hover{
+    background:#555; 
+  }
+.navbar {
+    position: fixed;
+    margin-top: 0px;
+    top: 0;
+    z-index: 1;
+    background-color: black;
+    width: 100%;
+    display: flex;
+    height: 80px;
+    justify-content: space-around;
 }
-
-.header-link {
-    color: #FFFFFF;
+a{
     text-decoration: none;
-    font-size: 25px;
-    margin-left: 45px;
+    color: inherit;
+}
+.leftnavbar{
+    margin-top: 25px;
+}
+.rightnavbar{
+    margin-top: 25px;
+}
+.centernavbar a{
+    font-size: 20px;
+    padding: 10px;
+}
+.centernavbar{
+    margin-top: 20px;
+    color: gray;
+}
+.centernavbar a:hover{
+    border-bottom: 2px solid #5C10BC;
+    color: white;
+}
+.active{
+    border-bottom: 2px solid #5C10BC;
+    color: white;
 }
 
 .register {
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 25px;
-    border: 1px solid transparent;
+    font-size: 20px;
     border-radius: 5px;
     padding: 10px;
     background-color: #5C10BC;
-    float: right;
-    margin-right: 50px;
-    margin-top: -9px;
 }
 
 h1 {
