--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,16 @@ a{
     border-bottom: 2px solid #5C10BC;
     color: white;
 }
-
+@media screen and (max-width: 767px) {
+    .rightnavbar{
+        display: none;
+    }
+}
+@media screen and (max-width: 767px) {
+    .centernavbar{
+        display: none;
+    }
+}
 .register {
     color: #FFFFFF;
     text-decoration: none;
@@ -63,6 +72,75 @@ a{
     background-color: #5C10BC;
 }
 
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.2s;
+  }
+  .active {
+    color: white;
+  }
+  .overlay a:hover,
+  .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 60px;
+    right: 45px;
+    font-size: 50px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay {
+      overflow-y: auto;
+    }
+    .overlay a {
+      font-size: 20px;
+    }
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+  span {
+    font-size: 30px;
+    cursor: pointer;
+    color: white;
+    display: none;
+  }
+  @media screen and (max-width: 767px){
+    span{
+        display: block;
+        margin-top: 16px;
+    }
+  }
 h1 {
     margin-top: 110px;
     font-size: 96px;
