--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,33 +141,86 @@ a{
         margin-top: 16px;
     }
   }
-h1 {
-    margin-top: 110px;
-    font-size: 96px;
-    margin-left: 464px;
-    color: #FFFFFF;
-    font-weight: 700;
+.section{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 700px;
 }
-
+@media screen and (max-width: 767px) {
+    .section{
+        height: 600px;
+    }
+} {
+    
+}
+.sectionleft{
+    color: white;
+    float: left;
+    text-align: left;
+    margin-top: 170px;
+    width: 600px;   
+}
+@media screen and (max-width: 767px) {
+    .sectionleft{
+        margin-left: 10px;
+        width: 300px;
+        margin-top: 150px;
+    }
+}
+.sectionleft h1{
+    font-size: 50px;
+    width: 650px;
+    line-height: 40px;
+}
+@media screen and (max-width: 767px) {
+    .sectionleft h1{
+        font-size: 30px;
+        margin-left: -30px;
+    }
+}
+.sectionleft p{
+    font-size: 16px;
+    color: gray;
+    line-height: 30px;
+}
+@media screen and (max-width: 767px) {
+    .sectionleft p{
+        font-size: 15px;
+        margin-left: -30px;
+        margin-top: 40px;
+    }
+}
+.sectionright{
+    color: white;
+    margin-top: 210px;
+}
+@media screen and (max-width: 767px) {
+    .sectionright{
+        display: none;
+    }
+}
 .quote-1 {
     text-align: center; 
     color: #FFFFFF;
     font-size: 30px;
-    margin-top: -29px;
+    margin-top: 30px;
 }
 
 #get-started {
     color: #FFFFFF;
     background-color: #5C10BC;
-    font-size: 30px;
-    border: 1px solid transparent;
+    font-size: 20px;
     border-radius: 5px;
     padding: 10px; 
-    margin-left: 780px;
     text-decoration: none;
-    margin-top: 400px;
+    margin-top: 90px;
 }
-
+@media screen and (max-width: 767px) {
+    #get-started{
+        margin-left: -30px;
+    }
+}
 .section-1 {
     background-color: #5C10BC;
     margin-top: 120px;
