--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,7 +217,7 @@ a{
 }
 #get-started {
     color: #FFFFFF;
-    background-color: #5C10BC;
+    background-color: rgb(93, 16, 188);
     font-size: 18px;
     border-radius: 5px;
     padding-left: 40px; 
